- mousedrake:
  o evdev and imwheel handle orthogonal things, so do use imwheel even if we
  need evdev (#40088)

Version 0.57 - 2 April 2008

- XFdrake:
  o workaround pb with nvidia driver: make dm restart xserver (#38297)
  o do not disable RenderAccel on nvidia-current
    (regression introduced in 0.21)

Version 0.55 - 27 March 2008

- XFdrake:
  o disable "DynamicTwinView" when not using TwinView (#39171)

Version 0.54 - 25 March 2008

- keyboarddrake library:
  o in drakx-finish-install, keyboard is asked after asking country, so have a
    good default based on country too (was done for pt_BR but not fr_XX)
    (#39221)

Version 0.53 - 21 March 2008

- XFdrake:
  o allow to set "EXA" on "intel" driver (#39162)

Version 0.52 - 20 March 2008

- XFdrake:
  o add option "Force display mode of DVI" on driver "nvidia" (#30066)   
- XFdrake library:
  o ensure set_default_background() doesn't fail (#39065)
    (ie default to 1024x768 if 0x0 is given)

Version 0.51 - 19 March 2008

- XFdrake:
  o use 24bpp on savage (#38750)
  o do use EDID HorizSync/VertRefresh on 16/10 (regression introduced in 0.50)
- keyboarddrake:
  o default romanian keyboard is qwerty (cf #38450)
  o "ro" really is "ro(std_cedilla)" 
    (to be more standard on unpatched xkeyboard-config)
  o "ro(us)" is wrong and not qwerty, use "ro(winkeys)" which is the only
    qwertz from symbols/ro

Version 0.50 - 11 March 2008

- XFdrake:
  o if the EDID gives a valid 16/10 preferred resolution (even if duplicated),
    but no HorizSync/VertRefresh, use a generic flat panel
    HorizSync/VertRefresh (needed for edid.lcd.dell-inspiron-6400, #37971)
  o handle DRIVER2_NO_SSE (from Cards+), needed by nvidia-current requiring SSE

Version 0.49 - 28 February 2008

- XFdrake: background images are now jpeg files

Version 0.48 - 28 February 2008

- XFdrake:
  o when setting background for the resolution, handle "hour"-based
    backgrounds (also add Mandriva.xml symlink)
  
Version 0.47 - 27 February 2008
