@@ -1,3 +1,5 @@
+- XFdrake:
+  o Composite is now the default in xserver 1.4 (#35043)
 - mousedrake:
   o evdev and imwheel handle orthogonal things, so do use imwheel even if we
   need evdev (#40088)
